hide view all button

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -74,9 +74,9 @@
                             <div class="w-slider-dot w-active" data-wf-ignore=""></div>
                             <div class="w-slider-dot" data-wf-ignore=""></div>
                         </div>
-                        <a href="#" class="button-gold w-inline-block">
-                            <div>VIEW&nbsp;ALL</div>
-                        </a>
+                        <!-- <a href="#" class="button-gold w-inline-block">
+                            <div>VIEW ALL</div>
+                        </a> -->
                     </div>
                 </div>
             </section>
