change form name

--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -12,7 +12,7 @@
             <form
               method="POST"
               data-netlify="true"
-              name="contact-form"
+              name="contact-page-form"
               action="/success/"
             >
               <div class="control">
