attempt field fix

--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -16,34 +16,35 @@
               action="/success/"
             >
               <div class="control">
-                <label class="overlay-label" for="banner_name">Name:</label>
+                <label class="overlay-label" for="contact_name">Name:</label>
                 <input
                   type="text"
                   class="text-field"
                   name="name"
-                  id="banner_name"
+                  id="contact_name"
                   autocomplete="name"
                   required
                 />
               </div>
               <div class="control">
-                <label class="overlay-label" for="banner_email"
+                <label class="overlay-label" for="contact_email"
                   >Email Address:</label
                 >
                 <input
                   type="email"
                   class="text-field"
                   name="email"
-                  id="banner_email"
+                  id="contact_email"
                   autocomplete="email"
                   required
                 />
               </div>
               <div class="control">
-                <label class="overlay-label" for="banner_phone"
+                <label class="overlay-label" for="contact_phone"
                   >Phone Number:</label
                 >
                 <input
+                  id="contact_phone"
                   type="tel"
                   class="text-field"
                   name="phone"
@@ -52,20 +53,20 @@
                 />
               </div>
               <div class="control">
-                <label for="banner_details" class="overlay-label"
+                <label for="contact_details" class="overlay-label"
                   >How Can We Help You?</label
                 >
                 <textarea
                   name="details"
                   class="text-field"
-                  id="banner_details"
+                  id="contact_details"
                   cols="30"
                   rows="10"
                 ></textarea>
               </div>
               <div class="control submit">
-                <button class="submit-button large" type="submit">
-                  Get Started <i class="fas fa-angle-right"></i>
+                <button type="submit" class="submit-button large" type="submit">
+                  Submit <i class="fas fa-angle-right"></i>
                 </button>
               </div>
             </form>
